Matrix.cppresult.txt
In file included from cur.cpp:16:0:
ruslan/Matrix.cpp: In function 'int main()':
ruslan/Matrix.cpp:282:21: error: cannot bind 'std::ostream {aka std::basic_ostream<char>}' lvalue to 'std::basic_ostream<char>&&'
 cout << c.transpose();
                     ^
In file included from /usr/include/g++/iostream:39:0,
                 from /usr/pkg/include/gtest/internal/gtest-port.h:196,
                 from /usr/pkg/include/gtest/internal/gtest-internal.h:40,
                 from /usr/pkg/include/gtest/gtest.h:57,
                 from cur.cpp:14:
/usr/include/g++/ostream:602:5: error:   initializing argument 1 of 'std::basic_ostream<_CharT, _Traits>& std::operator<<(std::basic_ostream<_CharT, _Traits>&&, const _Tp&) [with _CharT = char; _Traits = std::char_traits<char>; _Tp = Matrix]'
     operator<<(basic_ostream<_CharT, _Traits>&& __os, const _Tp& __x)
     ^
In file included from cur.cpp:16:0:
ruslan/Matrix.cpp:284:19: error: cannot bind 'std::ostream {aka std::basic_ostream<char>}' lvalue to 'std::basic_ostream<char>&&'
 cout << c.reverse();
                   ^
In file included from /usr/include/g++/iostream:39:0,
                 from /usr/pkg/include/gtest/internal/gtest-port.h:196,
                 from /usr/pkg/include/gtest/internal/gtest-internal.h:40,
                 from /usr/pkg/include/gtest/gtest.h:57,
                 from cur.cpp:14:
/usr/include/g++/ostream:602:5: error:   initializing argument 1 of 'std::basic_ostream<_CharT, _Traits>& std::operator<<(std::basic_ostream<_CharT, _Traits>&&, const _Tp&) [with _CharT = char; _Traits = std::char_traits<char>; _Tp = Matrix]'
     operator<<(basic_ostream<_CharT, _Traits>&& __os, const _Tp& __x)
     ^
cur.cpp: In function 'int main(int, char**)':
cur.cpp:207:31: error: declaration of C function 'int main(int, char**)' conflicts with
 int main(int argc, char **argv) {
                               ^
In file included from cur.cpp:16:0:
ruslan/Matrix.cpp:277:5: error: previous declaration 'int main()' here
 int main() 
     ^
./check.sh: line 24: ./a.out: No such file or directory
